--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 #counter {
     padding: 20px;
     background-color: #333;
@@ -12,7 +13,7 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
 }
 
 #reset {
@@ -20,4 +21,45 @@
     padding: 25px;
     font-weight: 900;
     font-size: 20px;
+    border: none;   
+    background-color: #fff;
+    border-radius: 15px;
+}
+
+.container {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left {
+    background-color: #888;
+    color: #999;
+    flex: 1;
+    margin-right: 10%;
+    width: 45%; 
+}
+
+.right {
+    background-color: #ddd;
+    color: #eee;
+    flex: 1;
+    width: 45%; 
+}
+
+.text {
+    font-size: 500px;
+}
+
+.info-container {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+body {
+    width: 100%;
 }
