--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
 }
 
 #reset {
-    margin-top: 100px;
     padding: 25px;
     font-weight: 900;
     font-size: 20px;
@@ -27,9 +26,8 @@
 }
 
 .container {
-    position: absolute;
-    z-index: -1;
     width: 100%;
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,7 +49,7 @@
 }
 
 .text {
-    font-size: 500px;
+    font-size: 250px;
 }
 
 .info-container {
@@ -61,5 +59,33 @@
 }
 
 body {
-    width: 100%;
+    /* width: 100%; */
 }
+
+@media only screen and (max-width: 600px) {
+    .info-container {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        /* width: 80%; */
+    }
+    .info-container h1 {
+        margin-top: 0;
+    }
+    .info-container h2 {
+        margin-top: 0;
+        font-size: 20px;
+        text-align: center;
+        font-weight: 100;
+    }
+    .container {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: row;
+        bottom: 0;  
+    }
+    /* .container {
+        /* font-size: 250px; */
+        /* width: 100%; */
+    } */
+  }
